fix(webui): make formatting of long paragraph more readable

--- a/webui/css/utilities/utilities.css
+++ b/webui/css/utilities/utilities.css
@@ -24,3 +24,13 @@
 .drop-shadow {
     filter: var(--drop-shadow)
 }
+
+.paragraph {
+    max-width: 700px;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 10px;
+}
